--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: #FF0077;
+	background: #0094FF;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -429,7 +429,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: #FF0077;
+	background: #0094FF;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -472,7 +472,7 @@ img.pull-left {
 	border-top: 11px solid rgba(255, 255, 255, 0.1);
 	border-right: 11px solid rgba(255, 255, 255, 0.1);
 	border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-	border-left: 11px solid #FF0077;
+	border-left: 11px solid #0094FF;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 	display: block;
@@ -595,7 +595,7 @@ input[type="password"]:focus,
 textarea:focus,
 select:focus {
 	color: #005bcc;
-	border-bottom: 1px solid #FF0077;
+	border-bottom: 1px solid #0094FF;
 }
 label, legend {
 	font-family: "poppins-bold", sans-serif;
@@ -736,7 +736,7 @@ button.stroke.large, .button.stroke.large {
 	line-height: 5.4rem !important;
 }
 button.stroke:hover, .button.stroke:hover {
-	border: 3px solid #FF0077;
+	border: 3px solid #0094FF;
 	color: #0094FF;
 }
 button::-moz-focus-inner, input::-moz-focus-inner {
@@ -1138,7 +1138,7 @@ header .logo a {
 }
 .menu-toggle span {
 	display: block;
-	background-color: #FF0077;
+	background-color: #0094FF;
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1504,8 +1504,8 @@ header .logo a {
 	margin-left: -30px;
 }
 .intro-info img {
-	height: 20rem;
-	width: 20rem;
+	height: 12rem;
+	width: 9rem;
 	border-radius: 50%;
 	margin: .9rem 0 0 0;
 	float: left;
@@ -2172,7 +2172,7 @@ header .logo a {
 	background: #FFFFFF;
 }
 .owl-theme .owl-controls .owl-page.active span {
-	background: #FF0077;
+	background: #0094FF;
 }
 
 
@@ -2311,7 +2311,7 @@ header .logo a {
 	padding: 0 2rem;
 	margin: 0;
 	color: #FFFFFF;
-	background: #FF0077;
+	background: #0094FF;
 }
 #contact form .form-field label::after {
 	position: absolute;
@@ -2320,7 +2320,7 @@ header .logo a {
 	margin-top: -6px;
 	border-top: 5px solid transparent;
 	border-bottom: 5px solid transparent;
-	border-right: 5px solid #FF0077;
+	border-right: 5px solid #0094FF;
 	content: "";
 }
 #contact input[type="text"],
@@ -2350,7 +2350,7 @@ header .logo a {
 	padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-	border-color: #FF0077;
+	border-color: #0094FF;
 	color: #FFFFFF;
 }
 #contact button.submitform {
@@ -2362,7 +2362,7 @@ header .logo a {
 	padding: 0 3rem;
 	margin-top: 4.8rem;
 	width: 100%;
-	background: #FF0077;
+	background: #0094FF;
 	color: #FFFFFF;
 }
 #contact button.submitform:hover, #contact button.submitform:focus {
